Add gold and purple VISUALANTIES logo and update references

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <nav class="navbar">
                 <a href="#" class="logo">
-                    <img src="images/logo-placeholder.png" alt="VISUALANTIES Logo">
+                    <img src="images/visualanties-logo.png" alt="VISUALANTIES Logo">
                 </a>
                 
                 <ul class="nav-menu">
@@ -738,7 +738,7 @@
             <div class="footer-content">
                 <div class="footer-about">
                     <div class="footer-logo">
-                        <img src="images/logo-placeholder.png" alt="VISUALANTIES Logo" class="pulse-glow">
+                        <img src="images/visualanties-logo.png" alt="VISUALANTIES Logo" class="pulse-glow">
                     </div>
                     <p>Light Magicians from eclectic fields of Art, Science and Technology band together as a collective; Visualanties - those of which have a vigilant sense of how to deliver the quintessential experience.</p>
                     <div class="footer-social">
