--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 </div>
                 
                 <div class="contact-form animate-on-scroll animated-border">
-                    <form action="#" method="post">
+                    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" id="contact-form">
                         <div class="form-group">
                             <input type="text" class="form-control" name="name" id="name" placeholder=" " required>
                             <label for="name" class="form-label">Your Name</label>
@@ -718,7 +718,8 @@
                         </div>
                         
                         <div class="form-group">
-                            <button type="submit" class="btn magnetic pulse-glow">Send Message</button>
+                            <button type="submit" class="btn magnetic pulse-glow" id="submit-btn">Send Message</button>
+                            <div id="form-status" class="form-status"></div>
                         </div>
                     </form>
                 </div>
